maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: ':' expected but ')' found.
def casP(x:Int,y:Int,k):Array[Int,Int] {
                      ^JediEscaper:38: error: identifier expected but '}' found.
}
^